sdkdir = $(includedir)/npapi-sdk
pkgconfigdir = $(libdir)/pkgconfig

sdk_HEADERS = \
	headers/npapi.h \
	headers/npfunctions.h \
	headers/npruntime.h \
	headers/nptypes.h

pkgconfig_DATA = npapi-sdk.pc

EXTRA_DIST = \
	samples/mac-basic/BasicPlugin.c \
	samples/mac-basic/BasicPlugin.h \
	samples/mac-basic/BasicPlugin_Prefix.pch \
	samples/mac-basic/BasicPlugin.xcodeproj/project.pbxproj \
	samples/mac-basic/English.lproj/InfoPlist.strings \
	samples/mac-basic/Info.plist \
	samples/unix-basic/BasicPlugin.c \
	samples/unix-basic/BasicPlugin.h \
	samples/unix-basic/Makefile
